--- a/algorithm-highestaverage/pom.xml
+++ b/algorithm-highestaverage/pom.xml
@@ -8,9 +8,9 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	
-	<artifactId>algorithm-dhont</artifactId>
+	<artifactId>algorithm-highestaverage</artifactId>
 	<packaging>jar</packaging>
-	<name>ajp-electoralsystems-algorithm-dhont</name>
+	<name>ajp-electoralsystems-algorithm-highestaverage</name>
 
 	<dependencies>
 		<dependency>
