--- a/api/pom.xml
+++ b/api/pom.xml
@@ -25,10 +25,14 @@
 		</dependency>
 		<dependency>
 			<groupId>ajp.electoralsystems</groupId>
-			<artifactId>algorithm-dhont</artifactId>
+			<artifactId>algorithm-highestaverage</artifactId>
 			<version>${project.version}</version>		
 		</dependency>
-						
+		<dependency>
+			<groupId>ajp.electoralsystems</groupId>
+			<artifactId>algorithm-quota</artifactId>
+			<version>${project.version}</version>		
+		</dependency>								
 		<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
