--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
 	<modules>
 		<module>algorithm-core</module>
 		<module>algorithm-engine</module>
-		<module>algorithm-dhont</module>
+		<module>algorithm-highestaverage</module>
+		<module>algorithm-quota</module>
 		<module>i18n</module>
 		<module>utils-ui</module>
 		<module>app</module>
@@ -59,6 +60,23 @@
 		    <artifactId>jackson-databind</artifactId>
 		    <version>2.9.9</version>
 		</dependency>
+					
+		<dependency>
+		    <groupId>org.hibernate.validator</groupId>
+		    <artifactId>hibernate-validator</artifactId>
+		    <version>6.0.2.Final</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.hibernate.validator</groupId>
+		    <artifactId>hibernate-validator-annotation-processor</artifactId>
+		    <version>6.0.2.Final</version>
+		</dependency>					
+							
+		<dependency>
+		   <groupId>org.glassfish</groupId>
+		   <artifactId>javax.el</artifactId>
+		   <version>3.0.1-b08</version>
+		</dependency>					
 					
 	</dependencies>
 
