--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,13 @@
 					    <target>1.8</target>
 					</configuration>
 			    </plugin>
+			    <plugin>
+				    <groupId>org.apache.maven.plugins</groupId>
+				    <artifactId>maven-javadoc-plugin</artifactId>
+				    <configuration>
+				        <source>8</source>
+				    </configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
